# neuralshielddigital

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  dev.db  docker-compose.yml  package.json  pyproject.toml  requirements.txt  tailwind.config.js  test_server.py
.github/workflows/: deploy.yml
app/: __init__.py  main.py
app/core/: __init__.py  config.py  database.py  exceptions.py  logging.py  middleware.py  security.py
app/forms/: __init__.py  admin_auth.py  base.py  consultation.py  contact.py  validators.py
app/models/: __init__.py  admin_user.py  audit_log.py  blog_category.py  blog_post.py  case_study.py  consultation_booking.py  contact_lead.py  page_seo.py  product.py  service.py  testimonial.py
app/repositories/: admin_users.py  blog_posts.py  bookings.py  case_studies.py  leads.py  products.py  seo_meta.py  services.py  testimonials.py
app/routers/: admin_auth.py  admin_blog.py  admin_blog_categories.py  admin_bookings.py  admin_dashboard.py  admin_leads.py  admin_products.py  admin_seo.py  admin_services.py  admin_testimonials.py  blog.py  deps.py  public_forms.py  public_pages.py
app/schemas/: __init__.py  auth.py  blog.py  booking.py  contact.py  product.py  seo.py  service.py  testimonial.py
app/services/: __init__.py  auth_service.py  base.py  blog_management_service.py  blog_service.py  booking_service.py  consultation_booking_service.py  (+10 more)
docker/: app.Dockerfile  nginx.Dockerfile
migrations/: README.md  env.py  script.py.mako
nginx/: default.conf  nginx.conf
scripts/: create_admin.py  seed_data.py  start.sh
(+63 files in other folders)
