[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuralshielddigital"
version = "0.1.0"
description = "NeuralShield Digital production website and admin platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "fastapi>=0.115.0",
  "itsdangerous>=2.2.0",
  "jinja2>=3.1.4",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.2.3",
  "pydantic[email]>=2.9.2",
  "pydantic-settings>=2.6.1",
  "python-multipart>=0.0.12",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.32.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2",
  "pytest>=8.3.3",
  "ruff>=0.7.1"
]

[tool.setuptools]
packages = ["app"]
